@@ -19,7 +19,8 @@
 
 package org.elasticsearch.common.joda;
 
-import org.elasticsearch.common.time.CompoundDateTimeFormatter;
+import org.elasticsearch.bootstrap.JavaVersion;
+import org.elasticsearch.common.time.DateFormatter;
 import org.elasticsearch.common.time.DateFormatters;
 import org.elasticsearch.test.ESTestCase;
 import org.joda.time.DateTime;
@@ -28,13 +29,11 @@ import org.joda.time.DateTimeZone;
 import java.time.ZoneOffset;
 import java.time.ZonedDateTime;
 import java.time.format.DateTimeFormatter;
-import java.time.format.DateTimeParseException;
 import java.time.temporal.TemporalAccessor;
 import java.util.Locale;
 
 import static org.hamcrest.Matchers.containsString;
 import static org.hamcrest.Matchers.is;
-import static org.hamcrest.Matchers.startsWith;
 
 public class JavaJodaTimeDuellingTests extends ESTestCase {
 
@@ -63,15 +62,30 @@ public class JavaJodaTimeDuellingTests extends ESTestCase {
         formatter3.parse("20181126T121212.123-0830");
     }
 
-    public void testCustomTimeFormats() {
-        assertSameDate("2010 12 06 11:05:15", "yyyy dd MM HH:mm:ss");
-        assertSameDate("12/06", "dd/MM");
-        assertSameDate("Nov 24 01:29:01 -0800", "MMM dd HH:mm:ss Z");
-    }
+    // this test requires tests to run with -Djava.locale.providers=COMPAT in order to work
+//    public void testCustomTimeFormats() {
+//        assertSameDate("2010 12 06 11:05:15", "yyyy dd MM HH:mm:ss");
+//        assertSameDate("12/06", "dd/MM");
+//        assertSameDate("Nov 24 01:29:01 -0800", "MMM dd HH:mm:ss Z");
+//
+//        // also ensure that locale based dates are the same
+//        assertSameDate("Di., 05 Dez. 2000 02:55:00 -0800", "E, d MMM yyyy HH:mm:ss Z", LocaleUtils.parse("de"));
+//        assertSameDate("Mi., 06 Dez. 2000 02:55:00 -0800", "E, d MMM yyyy HH:mm:ss Z", LocaleUtils.parse("de"));
+//        assertSameDate("Do., 07 Dez. 2000 00:00:00 -0800", "E, d MMM yyyy HH:mm:ss Z", LocaleUtils.parse("de"));
+//        assertSameDate("Fr., 08 Dez. 2000 00:00:00 -0800", "E, d MMM yyyy HH:mm:ss Z", LocaleUtils.parse("de"));
+//
+//        DateTime dateTimeNow = DateTime.now(DateTimeZone.UTC);
+//        ZonedDateTime javaTimeNow = Instant.ofEpochMilli(dateTimeNow.getMillis()).atZone(ZoneOffset.UTC);
+//        assertSamePrinterOutput("E, d MMM yyyy HH:mm:ss Z", LocaleUtils.parse("de"), javaTimeNow, dateTimeNow);
+//    }
 
     public void testDuellingFormatsValidParsing() {
         assertSameDate("1522332219", "epoch_second");
+        assertSameDate("0", "epoch_second");
+        assertSameDate("1", "epoch_second");
         assertSameDate("1522332219321", "epoch_millis");
+        assertSameDate("0", "epoch_millis");
+        assertSameDate("1", "epoch_millis");
 
         assertSameDate("20181126", "basic_date");
         assertSameDate("20181126T121212.123Z", "basic_date_time");
@@ -79,21 +93,40 @@ public class JavaJodaTimeDuellingTests extends ESTestCase {
         assertSameDate("20181126T121212.123-0800", "basic_date_time");
 
         assertSameDate("20181126T121212Z", "basic_date_time_no_millis");
+        assertSameDate("20181126T121212+01:00", "basic_date_time_no_millis");
+        assertSameDate("20181126T121212+0100", "basic_date_time_no_millis");
         assertSameDate("2018363", "basic_ordinal_date");
         assertSameDate("2018363T121212.123Z", "basic_ordinal_date_time");
+        assertSameDate("2018363T121212.123+0100", "basic_ordinal_date_time");
+        assertSameDate("2018363T121212.123+01:00", "basic_ordinal_date_time");
         assertSameDate("2018363T121212Z", "basic_ordinal_date_time_no_millis");
+        assertSameDate("2018363T121212+0100", "basic_ordinal_date_time_no_millis");
+        assertSameDate("2018363T121212+01:00", "basic_ordinal_date_time_no_millis");
         assertSameDate("121212.123Z", "basic_time");
+        assertSameDate("121212.123+0100", "basic_time");
+        assertSameDate("121212.123+01:00", "basic_time");
         assertSameDate("121212Z", "basic_time_no_millis");
+        assertSameDate("121212+0100", "basic_time_no_millis");
+        assertSameDate("121212+01:00", "basic_time_no_millis");
         assertSameDate("T121212.123Z", "basic_t_time");
+        assertSameDate("T121212.123+0100", "basic_t_time");
+        assertSameDate("T121212.123+01:00", "basic_t_time");
         assertSameDate("T121212Z", "basic_t_time_no_millis");
+        assertSameDate("T121212+0100", "basic_t_time_no_millis");
+        assertSameDate("T121212+01:00", "basic_t_time_no_millis");
         assertSameDate("2018W313", "basic_week_date");
         assertSameDate("1W313", "basic_week_date");
         assertSameDate("18W313", "basic_week_date");
         assertSameDate("2018W313T121212.123Z", "basic_week_date_time");
+        assertSameDate("2018W313T121212.123+0100", "basic_week_date_time");
+        assertSameDate("2018W313T121212.123+01:00", "basic_week_date_time");
         assertSameDate("2018W313T121212Z", "basic_week_date_time_no_millis");
+        assertSameDate("2018W313T121212+0100", "basic_week_date_time_no_millis");
+        assertSameDate("2018W313T121212+01:00", "basic_week_date_time_no_millis");
 
         assertSameDate("2018-12-31", "date");
         assertSameDate("18-5-6", "date");
+        assertSameDate("10000-5-6", "date");
 
         assertSameDate("2018-12-31T12", "date_hour");
         assertSameDate("2018-12-31T8", "date_hour");
@@ -109,7 +142,15 @@ public class JavaJodaTimeDuellingTests extends ESTestCase {
         assertSameDate("2018-12-31T12:12:12.1", "date_hour_minute_second_millis");
         assertSameDate("2018-12-31T12:12:12.1", "date_hour_minute_second_fraction");
 
-        assertSameDate("2018-12-31", "date_optional_time");
+        assertSameDate("2018-05", "date_optional_time");
+        assertSameDate("2018-05-30", "date_optional_time");
+        assertSameDate("2018-05-30T20", "date_optional_time");
+        assertSameDate("2018-05-30T20:21", "date_optional_time");
+        assertSameDate("2018-05-30T20:21:23", "date_optional_time");
+        assertSameDate("2018-05-30T20:21:23.123", "date_optional_time");
+        assertSameDate("2018-05-30T20:21:23.123Z", "date_optional_time");
+        assertSameDate("2018-05-30T20:21:23.123+0100", "date_optional_time");
+        assertSameDate("2018-05-30T20:21:23.123+01:00", "date_optional_time");
         assertSameDate("2018-12-1", "date_optional_time");
         assertSameDate("2018-12-31T10:15:30", "date_optional_time");
         assertSameDate("2018-12-31T10:15:3", "date_optional_time");
@@ -117,13 +158,27 @@ public class JavaJodaTimeDuellingTests extends ESTestCase {
         assertSameDate("2018-12-31T1:15:30", "date_optional_time");
 
         assertSameDate("2018-12-31T10:15:30.123Z", "date_time");
+        assertSameDate("2018-12-31T10:15:30.123+0100", "date_time");
+        assertSameDate("2018-12-31T10:15:30.123+01:00", "date_time");
         assertSameDate("2018-12-31T10:15:30.11Z", "date_time");
+        assertSameDate("2018-12-31T10:15:30.11+0100", "date_time");
+        assertSameDate("2018-12-31T10:15:30.11+01:00", "date_time");
         assertSameDate("2018-12-31T10:15:3.123Z", "date_time");
+        assertSameDate("2018-12-31T10:15:3.123+0100", "date_time");
+        assertSameDate("2018-12-31T10:15:3.123+01:00", "date_time");
 
         assertSameDate("2018-12-31T10:15:30Z", "date_time_no_millis");
+        assertSameDate("2018-12-31T10:15:30+0100", "date_time_no_millis");
+        assertSameDate("2018-12-31T10:15:30+01:00", "date_time_no_millis");
         assertSameDate("2018-12-31T10:5:30Z", "date_time_no_millis");
+        assertSameDate("2018-12-31T10:5:30+0100", "date_time_no_millis");
+        assertSameDate("2018-12-31T10:5:30+01:00", "date_time_no_millis");
         assertSameDate("2018-12-31T10:15:3Z", "date_time_no_millis");
+        assertSameDate("2018-12-31T10:15:3+0100", "date_time_no_millis");
+        assertSameDate("2018-12-31T10:15:3+01:00", "date_time_no_millis");
         assertSameDate("2018-12-31T1:15:30Z", "date_time_no_millis");
+        assertSameDate("2018-12-31T1:15:30+0100", "date_time_no_millis");
+        assertSameDate("2018-12-31T1:15:30+01:00", "date_time_no_millis");
 
         assertSameDate("12", "hour");
         assertSameDate("01", "hour");
@@ -148,36 +203,78 @@ public class JavaJodaTimeDuellingTests extends ESTestCase {
         assertSameDate("2018-1", "ordinal_date");
 
         assertSameDate("2018-128T10:15:30.123Z", "ordinal_date_time");
+        assertSameDate("2018-128T10:15:30.123+0100", "ordinal_date_time");
+        assertSameDate("2018-128T10:15:30.123+01:00", "ordinal_date_time");
         assertSameDate("2018-1T10:15:30.123Z", "ordinal_date_time");
+        assertSameDate("2018-1T10:15:30.123+0100", "ordinal_date_time");
+        assertSameDate("2018-1T10:15:30.123+01:00", "ordinal_date_time");
 
         assertSameDate("2018-128T10:15:30Z", "ordinal_date_time_no_millis");
+        assertSameDate("2018-128T10:15:30+0100", "ordinal_date_time_no_millis");
+        assertSameDate("2018-128T10:15:30+01:00", "ordinal_date_time_no_millis");
         assertSameDate("2018-1T10:15:30Z", "ordinal_date_time_no_millis");
+        assertSameDate("2018-1T10:15:30+0100", "ordinal_date_time_no_millis");
+        assertSameDate("2018-1T10:15:30+01:00", "ordinal_date_time_no_millis");
 
         assertSameDate("10:15:30.123Z", "time");
+        assertSameDate("10:15:30.123+0100", "time");
+        assertSameDate("10:15:30.123+01:00", "time");
         assertSameDate("1:15:30.123Z", "time");
+        assertSameDate("1:15:30.123+0100", "time");
+        assertSameDate("1:15:30.123+01:00", "time");
         assertSameDate("10:1:30.123Z", "time");
+        assertSameDate("10:1:30.123+0100", "time");
+        assertSameDate("10:1:30.123+01:00", "time");
         assertSameDate("10:15:3.123Z", "time");
+        assertSameDate("10:15:3.123+0100", "time");
+        assertSameDate("10:15:3.123+01:00", "time");
         assertParseException("10:15:3.1", "time");
         assertParseException("10:15:3Z", "time");
 
         assertSameDate("10:15:30Z", "time_no_millis");
+        assertSameDate("10:15:30+0100", "time_no_millis");
+        assertSameDate("10:15:30+01:00", "time_no_millis");
         assertSameDate("01:15:30Z", "time_no_millis");
+        assertSameDate("01:15:30+0100", "time_no_millis");
+        assertSameDate("01:15:30+01:00", "time_no_millis");
         assertSameDate("1:15:30Z", "time_no_millis");
+        assertSameDate("1:15:30+0100", "time_no_millis");
+        assertSameDate("1:15:30+01:00", "time_no_millis");
         assertSameDate("10:5:30Z", "time_no_millis");
+        assertSameDate("10:5:30+0100", "time_no_millis");
+        assertSameDate("10:5:30+01:00", "time_no_millis");
         assertSameDate("10:15:3Z", "time_no_millis");
+        assertSameDate("10:15:3+0100", "time_no_millis");
+        assertSameDate("10:15:3+01:00", "time_no_millis");
         assertParseException("10:15:3", "time_no_millis");
 
         assertSameDate("T10:15:30.123Z", "t_time");
+        assertSameDate("T10:15:30.123+0100", "t_time");
+        assertSameDate("T10:15:30.123+01:00", "t_time");
         assertSameDate("T1:15:30.123Z", "t_time");
+        assertSameDate("T1:15:30.123+0100", "t_time");
+        assertSameDate("T1:15:30.123+01:00", "t_time");
         assertSameDate("T10:1:30.123Z", "t_time");
+        assertSameDate("T10:1:30.123+0100", "t_time");
+        assertSameDate("T10:1:30.123+01:00", "t_time");
         assertSameDate("T10:15:3.123Z", "t_time");
+        assertSameDate("T10:15:3.123+0100", "t_time");
+        assertSameDate("T10:15:3.123+01:00", "t_time");
         assertParseException("T10:15:3.1", "t_time");
         assertParseException("T10:15:3Z", "t_time");
 
         assertSameDate("T10:15:30Z", "t_time_no_millis");
+        assertSameDate("T10:15:30+0100", "t_time_no_millis");
+        assertSameDate("T10:15:30+01:00", "t_time_no_millis");
         assertSameDate("T1:15:30Z", "t_time_no_millis");
+        assertSameDate("T1:15:30+0100", "t_time_no_millis");
+        assertSameDate("T1:15:30+01:00", "t_time_no_millis");
         assertSameDate("T10:1:30Z", "t_time_no_millis");
+        assertSameDate("T10:1:30+0100", "t_time_no_millis");
+        assertSameDate("T10:1:30+01:00", "t_time_no_millis");
         assertSameDate("T10:15:3Z", "t_time_no_millis");
+        assertSameDate("T10:15:3+0100", "t_time_no_millis");
+        assertSameDate("T10:15:3+01:00", "t_time_no_millis");
         assertParseException("T10:15:3", "t_time_no_millis");
 
         assertSameDate("2012-W48-6", "week_date");
@@ -186,13 +283,21 @@ public class JavaJodaTimeDuellingTests extends ESTestCase {
         // joda comes up with a different exception message here, so we have to adapt
         assertJodaParseException("2012-W1-8", "week_date",
             "Cannot parse \"2012-W1-8\": Value 8 for dayOfWeek must be in the range [1,7]");
-        assertJavaTimeParseException("2012-W1-8", "week_date", "Text '2012-W1-8' could not be parsed");
+        assertJavaTimeParseException("2012-W1-8", "week_date");
 
         assertSameDate("2012-W48-6T10:15:30.123Z", "week_date_time");
+        assertSameDate("2012-W48-6T10:15:30.123+0100", "week_date_time");
+        assertSameDate("2012-W48-6T10:15:30.123+01:00", "week_date_time");
         assertSameDate("2012-W1-6T10:15:30.123Z", "week_date_time");
+        assertSameDate("2012-W1-6T10:15:30.123+0100", "week_date_time");
+        assertSameDate("2012-W1-6T10:15:30.123+01:00", "week_date_time");
 
         assertSameDate("2012-W48-6T10:15:30Z", "week_date_time_no_millis");
+        assertSameDate("2012-W48-6T10:15:30+0100", "week_date_time_no_millis");
+        assertSameDate("2012-W48-6T10:15:30+01:00", "week_date_time_no_millis");
         assertSameDate("2012-W1-6T10:15:30Z", "week_date_time_no_millis");
+        assertSameDate("2012-W1-6T10:15:30+0100", "week_date_time_no_millis");
+        assertSameDate("2012-W1-6T10:15:30+01:00", "week_date_time_no_millis");
 
         assertSameDate("2012", "year");
         assertSameDate("1", "year");
@@ -221,15 +326,26 @@ public class JavaJodaTimeDuellingTests extends ESTestCase {
         assertSameDate("2018W313", "strict_basic_week_date");
         assertParseException("18W313", "strict_basic_week_date");
         assertSameDate("2018W313T121212.123Z", "strict_basic_week_date_time");
+        assertSameDate("2018W313T121212.123+0100", "strict_basic_week_date_time");
+        assertSameDate("2018W313T121212.123+01:00", "strict_basic_week_date_time");
         assertParseException("2018W313T12128.123Z", "strict_basic_week_date_time");
         assertParseException("2018W313T81212.123Z", "strict_basic_week_date_time");
         assertParseException("2018W313T12812.123Z", "strict_basic_week_date_time");
         assertParseException("2018W313T12812.1Z", "strict_basic_week_date_time");
         assertSameDate("2018W313T121212Z", "strict_basic_week_date_time_no_millis");
+        assertSameDate("2018W313T121212+0100", "strict_basic_week_date_time_no_millis");
+        assertSameDate("2018W313T121212+01:00", "strict_basic_week_date_time_no_millis");
         assertParseException("2018W313T12128Z", "strict_basic_week_date_time_no_millis");
+        assertParseException("2018W313T12128+0100", "strict_basic_week_date_time_no_millis");
+        assertParseException("2018W313T12128+01:00", "strict_basic_week_date_time_no_millis");
         assertParseException("2018W313T81212Z", "strict_basic_week_date_time_no_millis");
+        assertParseException("2018W313T81212+0100", "strict_basic_week_date_time_no_millis");
+        assertParseException("2018W313T81212+01:00", "strict_basic_week_date_time_no_millis");
         assertParseException("2018W313T12812Z", "strict_basic_week_date_time_no_millis");
+        assertParseException("2018W313T12812+0100", "strict_basic_week_date_time_no_millis");
+        assertParseException("2018W313T12812+01:00", "strict_basic_week_date_time_no_millis");
         assertSameDate("2018-12-31", "strict_date");
+        assertParseException("10000-12-31", "strict_date");
         assertParseException("2018-8-31", "strict_date");
         assertSameDate("2018-12-31T12", "strict_date_hour");
         assertParseException("2018-12-31T8", "strict_date_hour");
@@ -246,16 +362,28 @@ public class JavaJodaTimeDuellingTests extends ESTestCase {
         assertSameDate("2018-12-31", "strict_date_optional_time");
         assertParseException("2018-12-1", "strict_date_optional_time");
         assertParseException("2018-1-31", "strict_date_optional_time");
+        assertParseException("10000-01-31", "strict_date_optional_time");
+        assertSameDate("2010-01-05T02:00", "strict_date_optional_time");
         assertSameDate("2018-12-31T10:15:30", "strict_date_optional_time");
+        assertSameDate("2018-12-31T10:15:30Z", "strict_date_optional_time");
+        assertSameDate("2018-12-31T10:15:30+0100", "strict_date_optional_time");
+        assertSameDate("2018-12-31T10:15:30+01:00", "strict_date_optional_time");
         assertParseException("2018-12-31T10:15:3", "strict_date_optional_time");
         assertParseException("2018-12-31T10:5:30", "strict_date_optional_time");
         assertParseException("2018-12-31T9:15:30", "strict_date_optional_time");
+        assertSameDate("2015-01-04T00:00Z", "strict_date_optional_time");
         assertSameDate("2018-12-31T10:15:30.123Z", "strict_date_time");
+        assertSameDate("2018-12-31T10:15:30.123+0100", "strict_date_time");
+        assertSameDate("2018-12-31T10:15:30.123+01:00", "strict_date_time");
         assertSameDate("2018-12-31T10:15:30.11Z", "strict_date_time");
+        assertSameDate("2018-12-31T10:15:30.11+0100", "strict_date_time");
+        assertSameDate("2018-12-31T10:15:30.11+01:00", "strict_date_time");
         assertParseException("2018-12-31T10:15:3.123Z", "strict_date_time");
         assertParseException("2018-12-31T10:5:30.123Z", "strict_date_time");
         assertParseException("2018-12-31T1:15:30.123Z", "strict_date_time");
         assertSameDate("2018-12-31T10:15:30Z", "strict_date_time_no_millis");
+        assertSameDate("2018-12-31T10:15:30+0100", "strict_date_time_no_millis");
+        assertSameDate("2018-12-31T10:15:30+01:00", "strict_date_time_no_millis");
         assertParseException("2018-12-31T10:5:30Z", "strict_date_time_no_millis");
         assertParseException("2018-12-31T10:15:3Z", "strict_date_time_no_millis");
         assertParseException("2018-12-31T1:15:30Z", "strict_date_time_no_millis");
@@ -278,12 +406,18 @@ public class JavaJodaTimeDuellingTests extends ESTestCase {
         assertParseException("2018-1", "strict_ordinal_date");
 
         assertSameDate("2018-128T10:15:30.123Z", "strict_ordinal_date_time");
+        assertSameDate("2018-128T10:15:30.123+0100", "strict_ordinal_date_time");
+        assertSameDate("2018-128T10:15:30.123+01:00", "strict_ordinal_date_time");
         assertParseException("2018-1T10:15:30.123Z", "strict_ordinal_date_time");
 
         assertSameDate("2018-128T10:15:30Z", "strict_ordinal_date_time_no_millis");
+        assertSameDate("2018-128T10:15:30+0100", "strict_ordinal_date_time_no_millis");
+        assertSameDate("2018-128T10:15:30+01:00", "strict_ordinal_date_time_no_millis");
         assertParseException("2018-1T10:15:30Z", "strict_ordinal_date_time_no_millis");
 
         assertSameDate("10:15:30.123Z", "strict_time");
+        assertSameDate("10:15:30.123+0100", "strict_time");
+        assertSameDate("10:15:30.123+01:00", "strict_time");
         assertParseException("1:15:30.123Z", "strict_time");
         assertParseException("10:1:30.123Z", "strict_time");
         assertParseException("10:15:3.123Z", "strict_time");
@@ -291,13 +425,19 @@ public class JavaJodaTimeDuellingTests extends ESTestCase {
         assertParseException("10:15:3Z", "strict_time");
 
         assertSameDate("10:15:30Z", "strict_time_no_millis");
+        assertSameDate("10:15:30+0100", "strict_time_no_millis");
+        assertSameDate("10:15:30+01:00", "strict_time_no_millis");
         assertSameDate("01:15:30Z", "strict_time_no_millis");
+        assertSameDate("01:15:30+0100", "strict_time_no_millis");
+        assertSameDate("01:15:30+01:00", "strict_time_no_millis");
         assertParseException("1:15:30Z", "strict_time_no_millis");
         assertParseException("10:5:30Z", "strict_time_no_millis");
         assertParseException("10:15:3Z", "strict_time_no_millis");
         assertParseException("10:15:3", "strict_time_no_millis");
 
         assertSameDate("T10:15:30.123Z", "strict_t_time");
+        assertSameDate("T10:15:30.123+0100", "strict_t_time");
+        assertSameDate("T10:15:30.123+01:00", "strict_t_time");
         assertParseException("T1:15:30.123Z", "strict_t_time");
         assertParseException("T10:1:30.123Z", "strict_t_time");
         assertParseException("T10:15:3.123Z", "strict_t_time");
@@ -305,6 +445,8 @@ public class JavaJodaTimeDuellingTests extends ESTestCase {
         assertParseException("T10:15:3Z", "strict_t_time");
 
         assertSameDate("T10:15:30Z", "strict_t_time_no_millis");
+        assertSameDate("T10:15:30+0100", "strict_t_time_no_millis");
+        assertSameDate("T10:15:30+01:00", "strict_t_time_no_millis");
         assertParseException("T1:15:30Z", "strict_t_time_no_millis");
         assertParseException("T10:1:30Z", "strict_t_time_no_millis");
         assertParseException("T10:15:3Z", "strict_t_time_no_millis");
@@ -321,12 +463,16 @@ public class JavaJodaTimeDuellingTests extends ESTestCase {
         // joda comes up with a different exception message here, so we have to adapt
         assertJodaParseException("2012-W01-8", "strict_week_date",
             "Cannot parse \"2012-W01-8\": Value 8 for dayOfWeek must be in the range [1,7]");
-        assertJavaTimeParseException("2012-W01-8", "strict_week_date", "Text '2012-W01-8' could not be parsed");
+        assertJavaTimeParseException("2012-W01-8", "strict_week_date");
 
         assertSameDate("2012-W48-6T10:15:30.123Z", "strict_week_date_time");
+        assertSameDate("2012-W48-6T10:15:30.123+0100", "strict_week_date_time");
+        assertSameDate("2012-W48-6T10:15:30.123+01:00", "strict_week_date_time");
         assertParseException("2012-W1-6T10:15:30.123Z", "strict_week_date_time");
 
         assertSameDate("2012-W48-6T10:15:30Z", "strict_week_date_time_no_millis");
+        assertSameDate("2012-W48-6T10:15:30+0100", "strict_week_date_time_no_millis");
+        assertSameDate("2012-W48-6T10:15:30+01:00", "strict_week_date_time_no_millis");
         assertParseException("2012-W1-6T10:15:30Z", "strict_week_date_time_no_millis");
 
         assertSameDate("2012", "strict_year");
@@ -366,6 +512,7 @@ public class JavaJodaTimeDuellingTests extends ESTestCase {
 
         ZonedDateTime javaDate = ZonedDateTime.of(year, month, day, hour, minute, second, 0, ZoneOffset.UTC);
         DateTime jodaDate = new DateTime(year, month, day, hour, minute, second, DateTimeZone.UTC);
+        assertSamePrinterOutput("epoch_second", javaDate, jodaDate);
 
         assertSamePrinterOutput("basicDate", javaDate, jodaDate);
         assertSamePrinterOutput("basicDateTime", javaDate, jodaDate);
@@ -410,7 +557,7 @@ public class JavaJodaTimeDuellingTests extends ESTestCase {
         assertSamePrinterOutput("year", javaDate, jodaDate);
         assertSamePrinterOutput("yearMonth", javaDate, jodaDate);
         assertSamePrinterOutput("yearMonthDay", javaDate, jodaDate);
-        assertSamePrinterOutput("epoch_second", javaDate, jodaDate);
+
         assertSamePrinterOutput("epoch_millis", javaDate, jodaDate);
         assertSamePrinterOutput("strictBasicWeekDate", javaDate, jodaDate);
         assertSamePrinterOutput("strictBasicWeekDateTime", javaDate, jodaDate);
@@ -445,26 +592,76 @@ public class JavaJodaTimeDuellingTests extends ESTestCase {
         assertSamePrinterOutput("strictYear", javaDate, jodaDate);
         assertSamePrinterOutput("strictYearMonth", javaDate, jodaDate);
         assertSamePrinterOutput("strictYearMonthDay", javaDate, jodaDate);
+        assertSamePrinterOutput("strict_date_optional_time", javaDate, jodaDate);
+        assertSamePrinterOutput("epoch_millis", javaDate, jodaDate);
+    }
+
+    public void testSamePrinterOutputWithTimeZone() {
+        String format = "strict_date_optional_time";
+        String dateInput = "2017-02-01T08:02:00.000-01:00";
+        DateFormatter javaFormatter = DateFormatter.forPattern(format);
+        TemporalAccessor javaDate = javaFormatter.parse(dateInput);
+
+        DateFormatter jodaFormatter = Joda.forPattern(format);
+        DateTime dateTime = jodaFormatter.parseJoda(dateInput);
+
+        String javaDateString = javaFormatter.withZone(ZoneOffset.ofHours(-1)).format(javaDate);
+        String jodaDateString = jodaFormatter.withZone(ZoneOffset.ofHours(-1)).formatJoda(dateTime);
+        String message = String.format(Locale.ROOT, "expected string representation to be equal for format [%s]: joda [%s], java [%s]",
+            format, jodaDateString, javaDateString);
+        assertThat(message, javaDateString, is(jodaDateString));
+    }
+
+    public void testDateFormatterWithLocale() {
+        Locale locale = randomLocale(random());
+        String pattern = randomBoolean() ? "strict_date_optional_time||date_time" : "date_time||strict_date_optional_time";
+        DateFormatter formatter = DateFormatter.forPattern(pattern).withLocale(locale);
+        assertThat(formatter.pattern(), is(pattern));
+        assertThat(formatter.locale(), is(locale));
     }
 
     public void testSeveralTimeFormats() {
-        assertSameDate("2018-12-12", "year_month_day||ordinal_date");
-        assertSameDate("2018-128", "year_month_day||ordinal_date");
+        {
+            String format = "year_month_day||ordinal_date";
+            DateFormatter jodaFormatter = Joda.forPattern(format);
+            DateFormatter javaFormatter = DateFormatter.forPattern(format);
+            assertSameDate("2018-12-12", format, jodaFormatter, javaFormatter);
+            assertSameDate("2018-128", format, jodaFormatter, javaFormatter);
+        }
+        {
+            String format = "strictDateOptionalTime||dd-MM-yyyy";
+            DateFormatter jodaFormatter = Joda.forPattern(format);
+            DateFormatter javaFormatter = DateFormatter.forPattern(format);
+            assertSameDate("31-01-2014", format, jodaFormatter, javaFormatter);
+        }
     }
 
     private void assertSamePrinterOutput(String format, ZonedDateTime javaDate, DateTime jodaDate) {
-        assertThat(jodaDate.getMillis(), is(javaDate.toEpochSecond() * 1000));
-        String javaTimeOut = DateFormatters.forPattern("dateOptionalTime").format(javaDate);
-        String jodaTimeOut = Joda.forPattern("dateOptionalTime").printer().print(jodaDate);
-        assertThat(javaTimeOut, is(jodaTimeOut));
+        assertThat(jodaDate.getMillis(), is(javaDate.toInstant().toEpochMilli()));
+        String javaTimeOut = DateFormatter.forPattern(format).format(javaDate);
+        String jodaTimeOut = Joda.forPattern(format).formatJoda(jodaDate);
+
+        if (JavaVersion.current().getVersion().get(0) == 8 && javaTimeOut.endsWith(".0")
+            && (format.equals("epoch_second") || format.equals("epoch_millis"))) {
+            // java 8 has a bug in DateTimeFormatter usage when printing dates that rely on isSupportedBy for fields, which is
+            // what we use for epoch time. This change accounts for that bug. It should be removed when java 8 support is removed
+            jodaTimeOut += ".0";
+        }
+        String message = String.format(Locale.ROOT, "expected string representation to be equal for format [%s]: joda [%s], java [%s]",
+                format, jodaTimeOut, javaTimeOut);
+        assertThat(message, javaTimeOut, is(jodaTimeOut));
     }
 
     private void assertSameDate(String input, String format) {
-        FormatDateTimeFormatter jodaFormatter = Joda.forPattern(format);
-        DateTime jodaDateTime = jodaFormatter.parser().parseDateTime(input);
+        DateFormatter jodaFormatter = Joda.forPattern(format);
+        DateFormatter javaFormatter = DateFormatter.forPattern(format);
+        assertSameDate(input, format, jodaFormatter, javaFormatter);
+    }
 
-        CompoundDateTimeFormatter javaTimeFormatter = DateFormatters.forPattern(format);
-        TemporalAccessor javaTimeAccessor = javaTimeFormatter.parse(input);
+    private void assertSameDate(String input, String format, DateFormatter jodaFormatter, DateFormatter javaFormatter) {
+        DateTime jodaDateTime = jodaFormatter.parseJoda(input);
+
+        TemporalAccessor javaTimeAccessor = javaFormatter.parse(input);
         ZonedDateTime zonedDateTime = DateFormatters.toZonedDateTime(javaTimeAccessor);
 
         String msg = String.format(Locale.ROOT, "Input [%s] Format [%s] Joda [%s], Java [%s]", input, format, jodaDateTime,
@@ -475,18 +672,19 @@ public class JavaJodaTimeDuellingTests extends ESTestCase {
 
     private void assertParseException(String input, String format) {
         assertJodaParseException(input, format, "Invalid format: \"" + input);
-        assertJavaTimeParseException(input, format, "Text '" + input + "' could not be parsed");
+        assertJavaTimeParseException(input, format);
     }
 
     private void assertJodaParseException(String input, String format, String expectedMessage) {
-        FormatDateTimeFormatter jodaFormatter = Joda.forPattern(format);
-        IllegalArgumentException e = expectThrows(IllegalArgumentException.class, () -> jodaFormatter.parser().parseDateTime(input));
+        DateFormatter jodaFormatter = Joda.forPattern(format);
+        IllegalArgumentException e = expectThrows(IllegalArgumentException.class, () -> jodaFormatter.parseJoda(input));
         assertThat(e.getMessage(), containsString(expectedMessage));
     }
 
-    private void assertJavaTimeParseException(String input, String format, String expectedMessage) {
-        CompoundDateTimeFormatter javaTimeFormatter = DateFormatters.forPattern(format);
-        DateTimeParseException dateTimeParseException = expectThrows(DateTimeParseException.class, () -> javaTimeFormatter.parse(input));
-        assertThat(dateTimeParseException.getMessage(), startsWith(expectedMessage));
+    private void assertJavaTimeParseException(String input, String format) {
+        DateFormatter javaTimeFormatter = DateFormatter.forPattern(format);
+        IllegalArgumentException e = expectThrows(IllegalArgumentException.class, () -> javaTimeFormatter.parse(input));
+        assertThat(e.getMessage(), containsString(input));
+        assertThat(e.getMessage(), containsString(format));
     }
 }
